# vise

./: .env.template  .gitignore  .gitlab-ci.yml  CHANGELOG.txt  Dockerfile  LICENSE.txt  README.hacking  README.md  docker-compose.debug.yml  docker-compose.yml  http_api.txt
doc/: Compiling-VISE.md  Debugging-VISE.md  (+9 more)
src/: CHANGELOG.txt  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  LICENSE_3rd_party.txt  README.txt
src/conf/: relja_retrival_conf.txt  viseconf.txt
src/res/win/: LICENSE_no_newline.txt  vise.rc
src/search_engine/: CMakeLists.txt
src/search_engine/relja_retrival/: CMakeLists.txt  README.txt  relja_retrival.cc  relja_retrival.h
src/search_engine/relja_retrival/api/: CMakeLists.txt  abs_api.cpp  abs_api.h  api.py  api_request.py  single_api.cpp  single_api.h  single_api.py  spatial_api.cpp  spatial_api.h  spatial_api_bk.cpp
src/search_engine/relja_retrival/compression/: CMakeLists.txt  char_streams.cpp  char_streams.h  compressor.h
src/search_engine/relja_retrival/indexing/: CMakeLists.txt  clst_centres.cpp  clst_centres.h  desc_file_rotate.h  desc_from_file_to_hell.h  desc_from_flat_file.h  desc_from_fvecs_file.h  desc_getter_from_file.h  index_with_data.cpp  index_with_data.h  index_with_data_file.cpp  index_with_data_file.h  index_with_data_file_fixed1.cpp  index_with_data_file_fixed1.h  soft_assigner.h
src/search_engine/relja_retrival/matching/: CMakeLists.txt
src/search_engine/relja_retrival/matching/det_ransac/: CMakeLists.txt  det_ransac.cpp  det_ransac.h  ellipse.cpp  ellipse.h  ellipse_util.h  homography.cpp  homography.h  putative.cpp  putative.h
src/search_engine/relja_retrival/matching/registration/: CMakeLists.txt  register_images.cpp  register_images.h
src/search_engine/relja_retrival/preprocessing/: CMakeLists.txt  colour_sift.cpp  colour_sift.h  desc_to_hell.h  feat_getter.cpp  feat_getter.h  feat_standard.cpp  feat_standard.h  holidays_public.cpp  holidays_public.h
src/search_engine/relja_retrival/represent/: quant_desc.h  query.h
src/search_engine/relja_retrival/retrieval/: CMakeLists.txt  multi_query.cpp  multi_query.h  retriever.cpp  retriever.h  spatial_defs.h  spatial_retriever.cpp  spatial_retriever.h
src/search_engine/relja_retrival/util/: CMakeLists.txt  argsort.h  bitcount.h  common_data.proto  image_util.cpp  image_util.h  jp_dist2.hpp  macros.h  median_computer.cpp  median_computer.h  mpi_queue.cpp  mpi_queue.h  par_queue.cpp  par_queue.h  protobuf_util.cpp  protobuf_util.h  python_cfg_to_ini.h  same_random.cpp  same_random.h  slow_construction.cpp  slow_construction.h  thread_queue.cpp  thread_queue.h  timing.h  util.cpp  util.h
src/search_engine/relja_retrival/util/tests/: CMakeLists.txt  test_median_computer.cpp  test_slow_construction.cpp  test_uintToShortStr.cpp
src/search_engine/relja_retrival/v2/: CMakeLists.txt
src/search_engine/relja_retrival/v2/dataset/: CMakeLists.txt  dataset_abs.h  dataset_entry.proto  dataset_v2.cpp  dataset_v2.h
src/search_engine/relja_retrival/v2/dataset/tests/: CMakeLists.txt  convert_text_to_dset.cpp  dataset_v2_test.cpp
src/search_engine/relja_retrival/v2/embedding/: CMakeLists.txt  convert_hamming_formats.cpp  embedder.cpp  embedder.h  hamming_data.proto  hamming_embedder.cpp  hamming_embedder.h
src/search_engine/relja_retrival/v2/embedding/tests/: CMakeLists.txt  popcnt.cpp
src/search_engine/relja_retrival/v2/evaluation/: CMakeLists.txt  eval_query.proto  evaluator_oxford.cpp  evaluator_oxford.h  evaluator_v2.cpp  evaluator_v2.h
src/search_engine/relja_retrival/v2/evaluation/tests/: CMakeLists.txt  compute_Pitts_query_feats.cpp  compute_SF_query_feats.cpp  compute_eval_oxford.cpp  compute_oxGQ.cpp  draw_ranked_SF.py  html_ranked_SF.py
src/search_engine/relja_retrival/v2/indexing/: CMakeLists.txt  build_index.cpp  build_index.h  build_index_status.proto  compute_clusters.py  create_index.cpp  daat.cpp  daat.h  index_entry.pb.cc  index_entry.pb.h  index_entry.proto  index_entry_util.cpp  index_entry_util.h  proto_db.cpp  proto_db.h  proto_db_file.cpp  proto_db_file.h  proto_db_header.pb.cc  proto_db_header.proto  proto_index.cpp  proto_index.h  proto_index_cached.cpp  proto_index_cached.h  proto_index_limit.cpp  proto_index_limit.h  uniq_entries.cpp  uniq_entries.h
src/search_engine/relja_retrival/v2/indexing/tests/: CMakeLists.txt  daat_test.cpp  idx_diff.cpp  imbalance_factor.cpp  invert_test.cpp  reduce_idxs.cpp  reduce_idxs_scale.cpp  stupid_create_iidx_test.cpp  test_quant_ellipse.cpp
src/search_engine/relja_retrival/v2/retrieval/: CMakeLists.txt  create_image_graph.cpp  export_image_graph.cpp  hamming.cpp  hamming.h  image_graph.cpp  image_graph.h  mq_filter_outliers.cpp  mq_filter_outliers.h  mq_joint_avg.cpp  mq_joint_avg.h  retriever_v2.cpp  retriever_v2.h  spatial_verif_v2.cpp  spatial_verif_v2.h  tfidf_data.proto  tfidf_v2.cpp  tfidf_v2.h  uniq_retriever.cpp  uniq_retriever.h  weighter_v2.cpp  weighter_v2.h  wgc.cpp  wgc.h
src/tests/: CMakeLists.txt  test_oxford_buildings.cc
src/vise/: CMakeLists.txt  cli_resources.h  connection.cc  connection.h  html_resources.h  http_request.cc  http_request.h  http_response.cc  http_response.h  http_server.cc  http_server.h  metadata.cc  metadata.h  project.cc  project.h  project_html_resources.h  project_manager.cc  project_manager.h  project_manager_test.cc  project_test.cc  search_engine.cc  search_engine.h  search_query.h  search_result.h  task_progress.cc  task_progress.h  unit_tests.cc  vise-cli.cc  vise-gui-win.cc  vise.cc  vise_test.sh  vise_util.cc  vise_util.h  vise_version.h  vise_version.h.in  vised.cc
src/www/: index.html  project.css  project_configure.js  project_external_search.js  project_file.js  project_filelist.js  project_group.js  project_image_graph.js  project_image_group.js  project_index_status.js  project_search.js  project_showmatch.js  project_visual_group.js  via0.js  vise.css  vise.js  vise_about.js  vise_common.js  vise_error.js  vise_home.js  vise_project_error.js  vise_settings.js  vise_wait.js
src/www/ox5k/: _add_files.html  _status.html  index.html  project.css
(+32 files in other folders)
